<resources xmlns:xliff="rn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Water polo Tracker</string>

    <!-- Common Game related titles and counters and messages -->
    <string name="game_timer" translatable="false">08:00</string>
    <string name="period_count">Period <xliff:g example="2" id="period_number">%1$d</xliff:g></string>
    <string name="possession_time">Possession time</string>
    <string name="possession_timer" translatable="false">00:30</string>
    <string name="foul_title">Fouls</string>
    <string name="timeout_title">Timeouts</string>
    <string name="timeout_timer" translatable="false">00:00</string>
    <string name="period_over">period is Over! Push Next Period button to continue!</string>
    <string name="game_over">Game Over! Restart the game to track it again!</string>

    <!-- Home team related strings -->
    <string name="home_name">Home</string>
    <string name="home_score_count" translatable="false">0</string>
    <string name="home_foul_count" translatable="false">0</string>

    <!-- Guest team related strings -->
    <string name="guest_name">Guest</string>
    <string name="guest_score_count" translatable="false">0</string>
    <string name="guest_foul_count" translatable="false">0</string>

    <!-- Button strings -->
    <string name="start" translatable="false">Start</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="resume">Resume</string>
    <string name="goal">Goal</string>
    <string name="possess">Possess</string>
    <string name="reset">Reset</string>

    <!-- Image description -->
    <string name="water_polo_ball_description">Water polo ball indicating ball possession</string>
    <string name="background_image_description">Waves of a water polo pool</string>
    <string name="foul">Foul</string>
    <string name="next_period">Next Period</string>
</resources>
